--- a/AVPZ/Assembly-CSharp-firstpass.csproj
+++ b/AVPZ/Assembly-CSharp-firstpass.csproj
@@ -66,6 +66,7 @@
      <Compile Include="Assets\Standard Assets\Scripts\Difficulty.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Forgot_Password.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\General Scripts\ActivateTrigger.cs" />
+     <Compile Include="Assets\Standard Assets\Scripts\LeaderBoard.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Login.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Loop_Play.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Main.cs" />
