--- a/AVPZ/Assembly-CSharp-firstpass.csproj
+++ b/AVPZ/Assembly-CSharp-firstpass.csproj
@@ -64,6 +64,7 @@
      <Compile Include="Assets\Standard Assets\Scripts\Chest.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Customize.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Difficulty.cs" />
+     <Compile Include="Assets\Standard Assets\Scripts\Door.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Finish.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Forgot_Password.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\General Scripts\ActivateTrigger.cs" />
@@ -75,7 +76,9 @@
      <Compile Include="Assets\Standard Assets\Scripts\NPCLOX2.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\NPCloxfinish.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\ObjectDestroyer.cs" />
+     <Compile Include="Assets\Standard Assets\Scripts\RedSynduk.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Register.cs" />
+     <Compile Include="Assets\Standard Assets\Scripts\ZelenuySunduk.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\coinsCollect.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\otkriva4ka.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\pause.cs" />
