--- a/AVPZ/Assembly-CSharp-Editor-vs.csproj
+++ b/AVPZ/Assembly-CSharp-Editor-vs.csproj
@@ -162,6 +162,8 @@
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass-vs.csproj">
       <Project>{248681B3-D26F-EA98-6AAC-1C183CAF9357}</Project>      <Name>Assembly-CSharp-firstpass-vs</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-CSharp-vs.csproj">
+      <Project>{3802D301-60C4-5C72-8D00-E5E18DAFC5D1}</Project>      <Name>Assembly-CSharp-vs</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
