--- a/AVPZ/Assembly-CSharp-Editor.csproj
+++ b/AVPZ/Assembly-CSharp-Editor.csproj
@@ -158,6 +158,8 @@
       <Project>{248681B3-D26F-EA98-6AAC-1C183CAF9357}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-UnityScript-firstpass.unityproj">
       <Project>{C173B82B-1AE3-E143-AD30-05CA2F91946F}</Project>      <Name>Assembly-UnityScript-firstpass</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-CSharp.csproj">
+      <Project>{3802D301-60C4-5C72-8D00-E5E18DAFC5D1}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-UnityScript.unityproj">
       <Project>{E272A9AC-DCC0-477D-27D3-559B93A4B791}</Project>      <Name>Assembly-UnityScript</Name>    </ProjectReference>
   </ItemGroup>
