--- a/AVPZ/Assembly-CSharp-firstpass-vs.csproj
+++ b/AVPZ/Assembly-CSharp-firstpass-vs.csproj
@@ -78,6 +78,7 @@
      <Compile Include="Assets\Standard Assets\Scripts\ObjectDestroyer.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\RedSynduk.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Register.cs" />
+     <Compile Include="Assets\Standard Assets\Scripts\Shop.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\ZelenuySunduk.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\coinsCollect.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\otkriva4ka.cs" />
