--- a/AVPZ/Assembly-CSharp.csproj
+++ b/AVPZ/Assembly-CSharp.csproj
@@ -46,7 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\ChestOpen.cs" />
+     <Compile Include="Assets\Materials\other\Noclip.cs" />
+     <Compile Include="Assets\Materials\other\Parallaxing.cs" />
      <None Include="Assets\Standard Assets\Projectors\Guidelines.txt" />
      <None Include="Assets\Standard Assets\Glass Refraction (Pro Only)\Sources\Shaders\Glass-Stained-BumpDistort.shader" />
      <None Include="Assets\Standard Assets\Image Effects (Pro Only)\_Sources\Shaders\_BloomAndFlares\BlendOneOne.shader" />
