--- a/AVPZ/Assembly-CSharp-firstpass-vs.csproj
+++ b/AVPZ/Assembly-CSharp-firstpass-vs.csproj
@@ -39,10 +39,10 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>D:/Programm Files/Unity/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>D:/Programm Files/Unity/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
@@ -78,11 +78,14 @@
      <Compile Include="Assets\Standard Assets\Scripts\NPCLOX.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\NPCLOX2.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\NPCloxfinish.cs" />
+     <Compile Include="Assets\Standard Assets\Scripts\Noclip.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\ObjectDestroyer.cs" />
+     <Compile Include="Assets\Standard Assets\Scripts\Parallaxing.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\RedSynduk.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Register.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Shop.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\Teleport.cs" />
+     <Compile Include="Assets\Standard Assets\Scripts\Trap.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\ZelenuySunduk.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\coinsCollect.cs" />
      <Compile Include="Assets\Standard Assets\Scripts\lift.cs" />
@@ -191,13 +194,13 @@
      <None Include="Assets\Standard Assets\Image Effects (Pro Only)\_Sources\Shaders\_BloomAndFlares\BlurAndFlares.shader" />
      <None Include="Assets\Standard Assets\Image Effects (Pro Only)\_Sources\Shaders\_BloomAndFlares\BlendForBloom.shader" />
  <Reference Include="Mono.Data.SqliteClient">
- <HintPath>C:/Users/Igor/Documents/GitHub/RemoteRep/AVPZ/Assets/Plugins/Mono.Data.SqliteClient.dll</HintPath>
+ <HintPath>D:/GameDevelop/RemoteRep/AVPZ/Assets/Plugins/Mono.Data.SqliteClient.dll</HintPath>
  </Reference>
  <Reference Include="System.Data">
- <HintPath>C:/Users/Igor/Documents/GitHub/RemoteRep/AVPZ/Assets/Plugins/System.Data.dll</HintPath>
+ <HintPath>D:/GameDevelop/RemoteRep/AVPZ/Assets/Plugins/System.Data.dll</HintPath>
  </Reference>
  <Reference Include="System.EnterpriseServices">
- <HintPath>C:/Users/Igor/Documents/GitHub/RemoteRep/AVPZ/Assets/Plugins/System.EnterpriseServices.dll</HintPath>
+ <HintPath>D:/GameDevelop/RemoteRep/AVPZ/Assets/Plugins/System.EnterpriseServices.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
